# mg32-studio

./: meson.build
src/: core.cpp  core.hpp  editor.cpp  editor.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  meson.build
